--- a/MaxMind.GeoIP2.UnitTests/MaxMind.GeoIP2.UnitTests.csproj
+++ b/MaxMind.GeoIP2.UnitTests/MaxMind.GeoIP2.UnitTests.csproj
@@ -43,6 +43,18 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.1'">
+    <PackageReference Include="Microsoft.Extensions.Options">
+      <Version>3.1.3</Version>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+    <PackageReference Include="Microsoft.Extensions.Options">
+      <Version>3.1.3</Version>
+    </PackageReference>
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\MaxMind.GeoIP2\MaxMind.GeoIP2.csproj" />
   </ItemGroup>
