--- a/MaxMind.GeoIP2.UnitTests/MaxMind.GeoIP2.UnitTests.csproj
+++ b/MaxMind.GeoIP2.UnitTests/MaxMind.GeoIP2.UnitTests.csproj
@@ -5,6 +5,7 @@
     <VersionPrefix>5.0.0</VersionPrefix>
     <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">net9.0;net8.0;net481</TargetFrameworks>
     <TargetFrameworks Condition=" '$(OS)' != 'Windows_NT' ">net9.0;net8.0</TargetFrameworks>
+    <OutputType>Exe</OutputType>
     <AssemblyName>MaxMind.GeoIP2.UnitTests</AssemblyName>
     <AssemblyOriginatorKeyFile>../MaxMind.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
@@ -39,7 +40,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageReference Include="WireMock.Net" Version="1.8.4" />
-    <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="xunit.v3" Version="3.0.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
